Moved visualizations to the notebook

--- a/Tube commute.ipynb
+++ b/Tube commute.ipynb
@@ -42,6 +42,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commute.to <- commute.to[order(commute.to$Date),]\n",
+    "commute.from <- commute.from[order(commute.from$Date),]\n",
+    "commute.labeled <- commute.labeled[order(commute.labeled$Date),]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head(commute.labeled)\n",
+    "summary(commute.labeled)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,6 +75,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "start_time_from_vs_to <- function(commute.labeled){\n",
+    "    chart <- ggplot(commute.labeled, aes(x=Date, y=(Start.Time/60), colour= Direction)) +\n",
+    "        geom_point() +\n",
+    "        geom_smooth(method='lm',formula=y~x, se=FALSE)    \n",
+    "        scale_y_discrete(name=\"Ride start time (hour of the day)\", limits=7:19)\n",
+    "    return(chart)\n",
+    "}\n",
     "start_time_from_vs_to(commute.labeled)"
    ]
   },
@@ -63,6 +91,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "visualisation_from_vs_to <- function(commute.labeled){\n",
+    "    hist <- ggplot(commute.labeled, aes(x=Duration, color= Direction)) +\n",
+    "        geom_density() +\n",
+    "        xlab(\"Ride duration (minutes)\") +\n",
+    "        ylab(\"Fraction of occurrences\")\n",
+    "    return(hist)\n",
+    "}\n",
     "visualisation_from_vs_to(commute.labeled)"
    ]
   },
@@ -72,6 +107,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "visualisation_from_vs_to_by_day <- function(commute.data){\n",
+    "    hist <- ggplot(commute.data, aes(x=Duration, color= Direction)) +\n",
+    "        geom_density() +\n",
+    "        facet_grid(Weekday ~.) +\n",
+    "        xlab(\"Ride duration (minutes)\") +\n",
+    "        ylab(\"Fraction of occurrences\")\n",
+    "    return(hist)\n",
+    "}\n",
     "visualisation_from_vs_to_by_day(commute.labeled)"
    ]
   },
