Removed uninteresting plots

--- a/Tube commute.ipynb
+++ b/Tube commute.ipynb
@@ -21,6 +21,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options(repr.plot.width=7, repr.plot.height=4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,41 +100,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualisation_from_vs_to <- function(commute.labeled){\n",
-    "    hist <- ggplot(commute.labeled, aes(x=Duration, color= Direction)) +\n",
-    "        geom_density() +\n",
-    "        xlab(\"Ride duration (minutes)\") +\n",
-    "        ylab(\"Fraction of occurrences\")\n",
-    "    return(hist)\n",
+    "visualise_time_vs_duration <- function(commute.labeled){\n",
+    "  format_hours <- function(minutes){\n",
+    "    return(sprintf(\"%d:%02d\", as.integer(minutes%/%60), as.integer(minutes%%60)))\n",
+    "  }\n",
+    "  # Displaying points loses data. The more samples there are the more likely it is\n",
+    "  # that there will be a clash between different rides that touched in and out at the\n",
+    "  # same time.\n",
+    "  # The heatmap solves this issue but to get a decent visualisation requires\n",
+    "  # it's better to take bins of 5 minutes for the touch in time. This prevents too\n",
+    "  # many missing values to show up.\n",
+    "  # Keeping the full granularity for ride duration works fine.\n",
+    "  plot <- ggplot(commute.labeled, aes(Start.Time, Duration)) +\n",
+    "    geom_bin2d(drop=TRUE, binwidth=c(5,1), show.legend = FALSE) +\n",
+    "    facet_grid(. ~Direction, scales = \"free\") +\n",
+    "    scale_x_continuous(\"Touch in time\", breaks = seq(420,1200,30), labels = format_hours) +\n",
+    "    scale_y_continuous(\"Ride duration\", labels = scales::unit_format(unit = \"min\")) +\n",
+    "    scale_fill_continuous(\"Count\", low = \"white\", high = \"black\", limits=c(0,NA)) +    \n",
+    "    theme_bw() +\n",
+    "    # for facet grid\n",
+    "    theme(strip.background = element_rect(colour=\"white\", fill=\"white\"), legend.position = 'bottom')\n",
+    "  return(plot)\n",
     "}\n",
-    "visualisation_from_vs_to(commute.labeled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "visualisation_from_vs_to_by_day <- function(commute.data){\n",
-    "    hist <- ggplot(commute.data, aes(x=Duration, color= Direction)) +\n",
-    "        geom_density() +\n",
-    "        facet_grid(Weekday ~.) +\n",
-    "        xlab(\"Ride duration (minutes)\") +\n",
-    "        ylab(\"Fraction of occurrences\")\n",
-    "    return(hist)\n",
-    "}\n",
-    "visualisation_from_vs_to_by_day(commute.labeled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "visualise_time_vs_duration(commute.labeled)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
